_css/custom.css
/* Custom */
body {
  color: #4a4a4a;
}

a {
  color: black;
}

a.btn:visited {
  color: white;
}

a:visited {
  color: gray;
}

a:hover {
  color: #777;
  text-decoration: underline;
}

img {
  height: auto;
  max-width: 100%;
}

h1 {
  margin-bottom: 1em;
  font-size: 150%;
}

h1.headline {
  font-size: 170%;
  margin-bottom: 0.5em;
}

h2 {
  font-size: 130%;
}

h3 {
  font-size: 120%;
}

code {
  color: inherit;
}

.page-content {
  min-height: 500px;
}

.page-content .container {
  margin-top: 5.5rem;
}

.navbar .navbar-brand {
  font-size: 1.4rem;
  padding: 0;
}

.navbar .nav-item:not(:last-of-type) {
  margin-right: 0.5rem;
}

.navbar .nav-item.active {
  border-bottom: 2px solid black;
}

.home {
  width: 80%;
  margin: auto;
}

.posts {
  padding-left: 20px;
  font-size: 1.2em;
}

.posts .post-date {
  display: inline-block;
  width: 7.3rem;
}

.posts li {
  list-style-type: none;
  margin-top: 0.5em;
}

.posts .more {
  margin-top: 20px;
}

.center {
  text-align: center;
}

.post {
  width: 90%;
  margin: auto;
  line-height: 1.618;
  font-size: 18px;
}

.post h2 {
  margin: 2rem 0 1rem 0;
}

.post .little-face img {
  margin-left: 5px;
}

.post article {
  margin: 2rem 0;
}

.post article a {
  text-decoration: none;
  border-bottom: 1px dotted;
}

.post ol > li:not(:first-of-type) {
  margin-top: 0.5em;
}

.post .report-bugs {
  margin-top: 20px;
}

.post .related {
  border-top: 1px solid #d3d3d3;
  margin-top: 20px;
  padding-top: 20px;
}

.post .pagination {
  margin: 1rem 0;
  width: 100%;
}

footer.footer {
  color: black;
  margin-top: 2rem;
}

footer hr {
  width: 80%;
}

@media (max-width: 768px) {
  footer {
    text-align: center;
  }
}

/* account for fixed header */
.anchor-fix::before {
  content: "";
  display: block;
  height: 75px;
  margin-top: -75px;
  visibility: hidden;
}

.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus {
  background-color: gray;
}

.accordian {
  margin: 1rem;
}

@media (max-width: 768px) {
  .accordian {
    margin: 1rem 0;
  }
}

.accordian details {
  margin: 0.1rem 0;
}

.accordian details svg.octicon {
  margin-top: -4px;
  margin-right: 0.5rem;
  fill: currentColor;
}

.accordian details ul {
  margin-top: 0.5rem;
}

.accordian details .row:not(:first-of-type) {
  margin-top: 1rem;
}

.accordian details summary h3 {
  display: inline-block;
}

.tag-list {
  background-color: white;
  border: none;
  display: flex;
  flex-wrap: wrap;
  padding: 0;
}

.tag-list a {
  background-color: #eee;
  border: 1px solid gray;
  flex-grow: 0.01;
  margin: 1% 2% 1% 0;
  padding: 0.25em 0.75em 0.25em 0.55em;
  text-decoration: none;
}

/* Reset highlight plain text color */
.highlight {
  color: #d0d0d0;
  padding: 8px 12px;
}

/* Native pygment style - https://github.com/jwarby/jekyll-pygments-themes */
.highlight pre {
  background-color: #404040;
}
.highlight .hll {
  background-color: #404040;
}
.highlight .c {
  color: #999999;
  font-style: italic;
} /* Comment */
.highlight .err {
  color: #a61717;
  background-color: #e3d2d2;
} /* Error */
.highlight .g {
  color: #d0d0d0;
} /* Generic */
.highlight .k {
  color: #6ab825;
  font-weight: bold;
} /* Keyword */
.highlight .l {
  color: #d0d0d0;
} /* Literal */
.highlight .n {
  color: #d0d0d0;
} /* Name */
.highlight .o {
  color: #d0d0d0;
} /* Operator */
.highlight .x {
  color: #d0d0d0;
} /* Other */
.highlight .p {
  color: #d0d0d0;
} /* Punctuation */
.highlight .cm {
  color: #999999;
  font-style: italic;
} /* Comment.Multiline */
.highlight .cp {
  color: #cd2828;
  font-weight: bold;
} /* Comment.Preproc */
.highlight .c1 {
  color: #999999;
  font-style: italic;
} /* Comment.Single */
.highlight .cs {
  color: #e50808;
  font-weight: bold;
  background-color: #520000;
} /* Comment.Special */
.highlight .gd {
  color: #d22323;
} /* Generic.Deleted */
.highlight .ge {
  color: #d0d0d0;
  font-style: italic;
} /* Generic.Emph */
.highlight .gr {
  color: #d22323;
} /* Generic.Error */
.highlight .gh {
  color: #ffffff;
  font-weight: bold;
} /* Generic.Heading */
.highlight .gi {
  color: #589819;
} /* Generic.Inserted */
.highlight .go {
  color: #cccccc;
} /* Generic.Output */
.highlight .gp {
  color: #aaaaaa;
} /* Generic.Prompt */
.highlight .gs {
  color: #d0d0d0;
  font-weight: bold;
} /* Generic.Strong */
.highlight .gu {
  color: #ffffff;
  text-decoration: underline;
} /* Generic.Subheading */
.highlight .gt {
  color: #d22323;
} /* Generic.Traceback */
.highlight .kc {
  color: #6ab825;
  font-weight: bold;
} /* Keyword.Constant */
.highlight .kd {
  color: #6ab825;
  font-weight: bold;
} /* Keyword.Declaration */
.highlight .kn {
  color: #6ab825;
  font-weight: bold;
} /* Keyword.Namespace */
.highlight .kp {
  color: #6ab825;
} /* Keyword.Pseudo */
.highlight .kr {
  color: #6ab825;
  font-weight: bold;
} /* Keyword.Reserved */
.highlight .kt {
  color: #6ab825;
  font-weight: bold;
} /* Keyword.Type */
.highlight .ld {
  color: #d0d0d0;
} /* Literal.Date */
.highlight .m {
  color: #3677a9;
} /* Literal.Number */
.highlight .s {
  color: #ed9d13;
} /* Literal.String */
.highlight .na {
  color: #bbbbbb;
} /* Name.Attribute */
.highlight .nb {
  color: #24909d;
} /* Name.Builtin */
.highlight .nc {
  color: #447fcf;
  text-decoration: underline;
} /* Name.Class */
.highlight .no {
  color: #40ffff;
} /* Name.Constant */
.highlight .nd {
  color: #ffa500;
} /* Name.Decorator */
.highlight .ni {
  color: #d0d0d0;
} /* Name.Entity */
.highlight .ne {
  color: #bbbbbb;
} /* Name.Exception */
.highlight .nf {
  color: #447fcf;
} /* Name.Function */
.highlight .nl {
  color: #d0d0d0;
} /* Name.Label */
.highlight .nn {
  color: #447fcf;
  text-decoration: underline;
} /* Name.Namespace */
.highlight .nx {
  color: #d0d0d0;
} /* Name.Other */
.highlight .py {
  color: #d0d0d0;
} /* Name.Property */
.highlight .nt {
  color: #6ab825;
  font-weight: bold;
} /* Name.Tag */
.highlight .nv {
  color: #40ffff;
} /* Name.Variable */
.highlight .ow {
  color: #6ab825;
  font-weight: bold;
} /* Operator.Word */
.highlight .w {
  color: #666666;
} /* Text.Whitespace */
.highlight .mf {
  color: #3677a9;
} /* Literal.Number.Float */
.highlight .mh {
  color: #3677a9;
} /* Literal.Number.Hex */
.highlight .mi {
  color: #3677a9;
} /* Literal.Number.Integer */
.highlight .mo {
  color: #3677a9;
} /* Literal.Number.Oct */
.highlight .sb {
  color: #ed9d13;
} /* Literal.String.Backtick */
.highlight .sc {
  color: #ed9d13;
} /* Literal.String.Char */
.highlight .sd {
  color: #ed9d13;
} /* Literal.String.Doc */
.highlight .s2 {
  color: #ed9d13;
} /* Literal.String.Double */
.highlight .se {
  color: #ed9d13;
} /* Literal.String.Escape */
.highlight .sh {
  color: #ed9d13;
} /* Literal.String.Heredoc */
.highlight .si {
  color: #ed9d13;
} /* Literal.String.Interpol */
.highlight .sx {
  color: #ffa500;
} /* Literal.String.Other */
.highlight .sr {
  color: #ed9d13;
} /* Literal.String.Regex */
.highlight .s1 {
  color: #ed9d13;
} /* Literal.String.Single */
.highlight .ss {
  color: #ed9d13;
} /* Literal.String.Symbol */
.highlight .bp {
  color: #24909d;
} /* Name.Builtin.Pseudo */
.highlight .vc {
  color: #40ffff;
} /* Name.Variable.Class */
.highlight .vg {
  color: #40ffff;
} /* Name.Variable.Global */
.highlight .vi {
  color: #40ffff;
} /* Name.Variable.Instance */
.highlight .il {
  color: #3677a9;
} /* Literal.Number.Integer.Long */

